[package]
name = "stm32f4-02-pwm"
version = "0.1.0"
authors = ["Greg Woods <gregwoodslancs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "*"
nb = "*"
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "*"

# Hopefully this will be merged into stm32-rs soon!
[dependencies.stm32f4xx-hal]
git = "https://github.com/thalesfragoso/stm32f4xx-hal.git"
branch = "pwm-impl"
features = ["rt", "stm32f411"]
